--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         steps: 
             - name: Checkout code
-              uses: actions/checkout@3
+              uses: actions/checkout@v3
 
             - name: Set up Python
               uses: actions/setup-python@v4
@@ -28,7 +28,7 @@ jobs:
         runs-on: ubuntu-latest
         steps: 
             - name: Checkout code
-              uses: actions/checkout@3
+              uses: actions/checkout@v3
 
             - name: Set up docker Buildx
               uses: docker/setup-buildx-action@v2
